tests/sema/golden/14_addr_invalid.out
tests/sema/bad/14_addr_invalid.sg:3:14: error: address-of '&' requires an lvalue variable/parameter
  let p:&int = &(x + 1);   // error: address-of '&' requires an lvalue variable/parameter
               ^
